# blueos-micro-ros-agent

./: Dockerfile  README.md
app/: main.py  pyproject.toml  settings.py
app/static/: index.html  register_service
